--- a/estilo.css
+++ b/estilo.css
@@ -6,11 +6,11 @@
 
 .navbar-nav {
     display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
+    flex-direction: column;
     text-align: center;
     font-family: 'Montserrat', sans-serif;
     font-weight: bold;
+    justify-content: space-evenly;
 }
 
 .nav-principal {
@@ -19,10 +19,11 @@
 }
 
 .row {
-        padding: 20px;
+        padding: 30px;
 }
 
 .menu {
+    width: 100%;
     background-color: #D9D9D9
 }
 
@@ -39,3 +40,24 @@ h4 {
 h5{
     font-family: 'Montserrat', sans-serif;
 }
+
+@media screen and (min-width:1200px) {
+    .navbar-nav {
+        display: flex;
+        flex-direction: row;
+    }
+
+    .logo {
+        width: 35%;
+    }
+
+    .carta {
+        width: 60%;
+    }
+
+    .menu {
+        width: 100%;
+        background-color: #D9D9D9
+    }
+}
+
