--- a/estilo.css
+++ b/estilo.css
@@ -14,6 +14,7 @@
 }
 
 .nav-principal {
+    align-content: center;
     width: 100%;
     height: 150px;
 }
@@ -39,6 +40,10 @@ h4 {
 
 h5{
     font-family: 'Montserrat', sans-serif;
+}
+
+p{
+    font-family: 'Montserrat', sans-serif;    
 }
 
 @media screen and (min-width:1200px) {
